app/assets/stylesheets/components/_exchange.scss
div#CenterContent {
    padding-bottom: 2rem !important;
}

.exchange--price-alert--show-modal {
    cursor: pointer;
}

.exchange--price-alert {
    .exchange--price-alert--description {
    }

    .exchange--price-alert--items {
        margin: 16px 0;
    }

    .exchange--price-alert--items--add {
        text-align: right;
        padding-right: 32px;
    }

    .exchange--price-alert--item {
        margin: 8px 0 !important;

        &:first-child {
            margin-top: 0 !important;
        }

        &:last-child {
            margin-bottom: 0 !important;
        }

        .exchange--price-alert--item--type {
        }
        .exchange--price-alert--item--price {
        }
        .exchange--price-alert--item--control {
            padding: 0 !important;
            border: 0 !important;

            &:focus {
                box-shadow: none !important;
            }
        }
    }
}

.market-layout {
    .column-header {
        width: 100%;
        padding-right: 10px;

        > ul {
            list-style-type: none;
            margin-left: 0px;
            width: 100%;
            margin-bottom: 0px;

            > li {
                font-size: 80%;
                cursor: pointer;
                display: inline-block;
                margin-right: 15px;
                text-transform: uppercase;
            }

            > li.last {
                margin-right: 0px;
            }

            li.active {
                cursor: default;
            }
        }
    }

    > .left-column {
        border-right: 1px solid $border-color;
        border-top: none;
    }

    .right-column {
        border-left: 1px solid $border-color;

        padding-top: 0 !important;
        padding-bottom: 0 !important;
        border-top: none;
    }
}

.top-bar {
    border-bottom: 1px solid grey;

    .shuffle {
        margin: 0 10px;
    }

    ul {
        line-height: 1.2;
    }
}

.market-content {
    padding-left: 5px !important;
    padding-right: 5px !important;
}

[class*="block-grid-"] > li {
    height: auto;

    padding: 0 0.625em 1.25em;
}

.order-table {
    width: 100%;

    &.fixed-table {
        table-layout: fixed;
        text-align: right;
    }

    > thead > tr > th {
        font-size: 14px;
        padding: 5px 5px;
        text-align: right;
    }

    > tbody > tr > td {
        font-size: 12px;
        padding-bottom: 4px;
    }

    .sticky-table-container {
        width: 100%;
    }
}

// Mozilla Specific Padding Issues on Sticky Table Wrapper
@-moz-document url-prefix() {
    .order-table-container .sticky-table .sticky-table-y-wrapper {
        padding-right: 0px !important;
    }
}

.my-orders {
    width: 48% !important;
    display: inline-table;
}

p.order-table-title {
    display: none;
}

.notification,
.notification.success,
.notification.info,
.notification.warning,
.notification.alert,
.notification.cancel {
    font-size: 0.75rem;
}

.backingWarning {
    color: yellow;
}
.backingError {
    color: red;
}

.bid-form {
    padding-top: 0.25rem !important;
    padding-bottom: 0.25rem !important;
}

.ask-form {
    padding-top: 0.25rem !important;
    padding-bottom: 0.25rem !important;
}

.buySellButton {
    float: right;
    min-width: 4rem;
}

form.order-form {
    padding: 10px;

    .ant-form-item {
        margin-bottom: 0;
    }

    .ant-input {
        text-align: right;
    }

    .ant-form-item-label {
        text-align: left;
        font-family: Roboto Medium, Monospaced Number, Chinese Quote,
            -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, PingFang SC,
            Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial,
            sans-serif;

        label {
            font-size: 90% !important;
        }
    }

    .ant-input-group-addon {
        text-align: left;
        width: 60% !important;
    }

    .expiration-datetime-picker--hidden {
        display: flex;
        visibility: hidden;
        height: 0;
    }
}

.exchange--buy-sell-form {
    // override "Extra" of Ant.Tabs (Buy/Sell Asset) to put it
    // on left side instead of right
    .ant-tabs-extra-content {
        float: left !important;
        padding: 0 15px;
        margin-right: 12px;
    }
}

.buy-form {
    > div.ant-tabs-bar {
        border-bottom: 1px solid #6ba583 !important;
    }
}

.sell-form {
    > div.ant-tabs-bar {
        border-bottom: 1px solid #e3745b !important;
    }
}

#market-charts {
    > div.Stockcharts__wrapper {
        overflow: hidden;
    }
    > div > div.tabs {
        margin-bottom: 0.25rem;

        .tab-item {
            padding-top: 0.1rem;
        }
    }
}
/* ... */

